<resources>
    <string name="app_name">NewsApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email address</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="log_in_button_text">LOG IN</string>
    <string name="newsapp">NewsApp</string>
    <string name="register_text">REGISTER</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_failed_message">The email address or password are incorrect.</string>
    <string name="invalid_name">Please fill in the full name input.</string>
    <string name="invalid_phone">A phone number has 10 digits.</string>
    <string name="registration_failed_message">Registration failed</string>
    <string name="science">SCIENCE</string>
    <string name="sports">SPORTS</string>
    <string name="business">BUSINESS</string>
    <string name="entertainment">ENTERTAINMENT</string>
    <string name="general">GENERAL</string>
    <string name="health">HEALTH</string>
    <string name="continue_button">Continue</string>
    <string name="pick_3_topics_to_start_reading_and_saving_articles">Pick 3 topics to start reading and saving articles.</string>
    <string name="welcome_back">Welcome back!</string>

    <!-- Widget strings -->
    <string name="appwidget_text">NewsApp</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title_activity_maps">Map</string>
</resources>